<resources>
    <string name="no_internet_connection">Please ensure that you are in an area with strong WiFI/3G Signal</string>
    <string name="connecting_msg">Connecting…</string>
    <string name="processing_msg">Processing…</string>
    <string name="activity_choose_language_english">English</string>
    <string name="font_futuracondensedmedium" translatable="false">futuracondensedmedium.ttf</string>
    <string name="font_HelveticaNeueRegular" translatable="false">helveticaregular.ttf</string>
    <string name="font_helveticaneuebold" translatable="false">helveticabold.otf</string>
    <string name="font_helveticaneuelight" translatable="false">helveticalight.otf</string>
    <string name="futuramedium" translatable="false">futuramedium.ttf</string>
    <string name="font_opensansbold" translatable="false">opensansbold.ttf</string>
    <string name="font_opensansregular" translatable="false">opensansregular.ttf</string>
    <string name="font_opensansemibold" translatable="false">opensanssemibold.ttf</string>
    <string name="font_opensanssemibold" translatable="false">opensanssemibold.ttf</string>
    <string name="font_opensansextrabold" translatable="false">opensansextrabold.ttf</string>
    <string name="font_opensanslight" translatable="false">opensanslight.ttf</string>
    <string name="font_helvetica" translatable="false">helvetica.otf</string>
    <string name="font_tekobold" translatable="false">teko-bold.ttf</string>
    <string name="font_tekolight" translatable="false">teko-light.ttf</string>
    <string name="font_tekoregular" translatable="false">teko-regular.ttf</string>
    <string name="font_tekomedium" translatable="false">teko-medium.ttf</string>
    <string name="font_tekosemibold" translatable="false">teko-semibold.ttf</string>
    <string name="font_ralewayeregular" translatable="false">ralewayregular.ttf</string>
    <string name="font_ralewaybold" translatable="false">ralewaybold.ttf</string>
    <string name="font_ralewayreg" translatable="false">ralewayreg.ttf</string>
    <string name="font_ralewayextrabold" translatable="false">ralewayextrabold.ttf</string>
    <string name="font_questrialregular" translatable="false">questrialregular.ttf</string>
    <string name="font_montserratmedium" translatable="false">montserratmedium.ttf</string>
    <string name="font_opensansitalicsemibold" translatable="false">opensansitalicsemibold.ttf</string>
    <string name="user_name_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="login_Sign_in_later">Sign in later</string>
    <string name="phone_login_sigin_signup">sign in / sign up</string>
    <string name="phone_signin">sign in</string>
    <string name="phone_login_signup">sign up</string>
    <string name="phone_login_message">Please enter your phone number</string>
    <string name="phone_login_message_has_account">This number has been registered.\nSign with your password.</string>
    <string name="phone_signup_message">Please enter the verification code we\'ve\n just sent to %s</string>
    <string name="phone_signup_new_password_messsage">Enter a password for your new account.</string>
    <string name="phone_signup_new_password_messsage_2">Enter a new password</string>
    <string name="phone_signup_new_password_tips">Password should be 6~20 characters.</string>
    <string name="dont_receive_virification_code">Didn\'t receive the code</string>
    <string name="phone_number_hint">Phone number</string>
    <string name="password_hint">Enter password</string>
    <string name="verification_code_hint">Enter verification code</string>
    <string name="next">next</string>
    <string name="resend_in_count_down">resend (%d)</string>
    <string name="resend_fixed_60s">resend (60)</string>
    <string name="resend">resend</string>
    <string name="verify">verify</string>
    <string name="phone_verify_title">Sign up with %s</string>
    <string name="phone_signin_verify_message">This number has not been registered yet. Tap \'Verify\' to send a
        verification code to this number
    </string>
    <string name="phone_signin_invalid_code_message">Invalid code. Tap \'Resend\' if you need a new code.</string>
    <string name="phone_signin_incorrect_password">Incorrect password entered.</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_password">reset password</string>
    <string name="reset_password_message">Reset your password by entering\nthe verification sent to this number.
    </string>
    <string name="user_name">Username</string>
    <string name="activity_sign_unknown_error">An unknown error. Please try again !</string>
    <string name="camera">Camera</string>
    <string name="btn_text_cancel">Cancel</string>
    <string name="btn_text_ok">OK</string>
    <string name="btn_text_done">Done</string>
    <string name="btn_text_wait">Wait</string>
    <string name="btn_text_close_stream">Close Stream</string>
    <string name="choose_from_library">Library</string>
    <string name="toast_cannot_retrieve_cropped_image">Cannot retrieve cropped image</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_pro_dbo">Date of Birth</string>
    <string name="edit_pro_avatar">Avatar</string>
    <string name="edit_pro_display_name">Display Name</string>
    <string name="edit_pro_id_name">ID Name</string>
    <string name="edit_pro_gender">Gender</string>
    <string name="edit_pro_gender_male">Male</string>
    <string name="edit_pro_gender_female">Female</string>
    <string name="edit_pro_biography">Biography</string>
    <string name="edit_pro_birthday">Birthday</string>
    <string name="edit_pro_save">Save</string>
    <string name="edit_pro_display_name_validation">Limit to 3 ~ 16 characters.</string>
    <string name="edit_pro_error_unselected_gender">Please select your gender</string>
    <string name="edit_pro_quote_hind">Update your status</string>
    <string name="search_new_user">Search</string>
    <string name="km_default">-- Km</string>
    <string name="search_title">Search username</string>
    <string name="daily_treat_message">Nice! you\'ve got…</string>
    <string name="daily_treat_message_ultimate">WOW! You\'re a winner!</string>
    <string name="open_it">open it</string>
    <string name="daily_treat_result_message">You opened the box and found…</string>
    <string name="daily_treat_result_message_already_claimed">You\'ve already claimed a treat today!</string>
    <string name="claim">claim</string>
    <string name="claim_later">later</string>
    <string name="daily_treat_reopen_in">Come back in %s for a new treat</string>
    <string name="daily_treat_share_message">Tell your friends all about it!</string>
    <string name="daily_treat_share_content">I have won %1$,d %2$s! Come join in the fun with me on BeLive!</string>
    <string name="facebok_friends">Facebook Friends</string>
    <string name="profile_header">PROFILE</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="stars">stars</string>
    <string name="profile_follow">Following</string>
    <string name="pop_up_option">Select Option</string>
    <string name="pop_up_follow_user">Follow User</string>
    <string name="pop_up_unfollow_user">Unfollow User</string>
    <string name="follow_us">Follow us</string>
    <string name="btn_text_yes">Yes</string>
    <string name="btn_text_no">No</string>
    <string name="are_you_sure_to_proceed">Are you sure you want to proceed?</string>
    <string name="do_you_want_to_delete_this_post">Do you want to delete this post?</string>
    <string name="do_you_want_to_delete_this_stream">Do you want to delete this recorded stream?</string>
    <string name="profile_post_not_of_me">This post is not belong to you</string>
    <string name="newsfeed_menu_del_post">Delete post</string>
    <string name="newsfeed_menu_del_challenge">Delete challenge</string>
    <string name="newsfeed_menu_edit_post">Edit post</string>
    <string name="newsfeed_menu_unfolow">Unfollow</string>
    <string name="newsfeed_menu_repost">Report</string>
    <string name="newsfeed_menu_unrepost">UnReport</string>
    <string name="newsfeed_like_count_text">likes</string>
    <string name="newsfeed_like_count_is_one">like</string>
    <string name="newsfeed_btn_live">LIVE</string>
    <string name="newsfeed_menu_edit_challenge">Edit Challenge</string>
    <string name="newsfeed_menu_unreport_challenge">UnReport</string>
    <string name="newsfeed_menu_del_submission">Delete submission</string>
    <string name="messages">Messages</string>
    <string name="transactions_slider">Pocket</string>
    <string name="setting_slider">Settings</string>
    <string name="personal_leaderboard_slider">Leaderboard</string>
    <string name="daily_treats">Daily Treats</string>
    <string name="invite_a_friend_slider">Invite a Friend</string>
    <string name="logout_slider">Log Out</string>
    <string name="login_slider">LogIn</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="write_a_message">Write a message</string>
    <string name="chat_camera">Camera</string>
    <string name="chat_video">Video</string>
    <string name="settings_bold">Setting</string>
    <string name="select_a_picture_from">Select a picture from</string>
    <string name="select_a_videos_from">Select a videos from</string>
    <string name="gem_menu">Gems</string>
    <string name="start_menu">Stars</string>
    <string name="loyalty_menu">Loyalty</string>
    <string name="celeb_menu">Celeb-Auction</string>
    <string name="nav_reward">Rewards</string>
    <string name="gacha_menu">Gacha</string>
    <string name="setting_title_notifications">Notifications</string>
    <string name="setting_notifications">Notifications</string>
    <string name="setting_live_notification">Live Notification</string>
    <string name="setting_notification_sound">Notification Sound</string>
    <string name="setting_hide_message_details">Hide Message Details</string>
    <string name="setting_Messaging">Messaging</string>
    <string name="setting_Language">Language</string>
    <string name="setting_Profile">Profile</string>
    <string name="setting_Edit_Profile">Edit Profile</string>
    <string name="setting_blocked_list">Blocked List</string>
    <string name="setting_Support">Support</string>
    <string name="setting_About_Us">About Us</string>
    <string name="setting_Redemption">Redemption Code</string>
    <string name="setting_Terms_And_Conditions">Terms And Conditions</string>
    <string name="setting_Deactivate_Account">Deactivate Account</string>
    <string name="setting_check_update">Check Updates</string>
    <string name="setting_version">Version %s</string>
    <string name="report_sexual_content">Sexual content</string>
    <string name="report_violent">Violent or repulsive content</string>
    <string name="report_hateful">Hateful or abusive content</string>
    <string name="report_harmful">Harmful dangerous acts</string>
    <string name="report_child">Child abuse</string>
    <string name="report_spam">Spam or misleading</string>
    <string name="report_infringes">Infringes my rights</string>
    <string name="report_what_issue">Report Reason</string>
    <string name="block_confirmation_content">Once you block someone, that person can no longer view your challenge
        and posts, nor receive any notifications from you even as a follower.
    </string>
    <string name="font_helveticamedium">helveticamedium.ttf</string>
    <string name="ended_stream_back">BACK</string>
    <string name="email_invalid">Email is invalid</string>
    <string name="redeem_input_email_title">Enter your email to redeem</string>
</resources>