<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/black"
        android:gravity="center|left"
        android:minWidth="400dp"
        android:paddingLeft="3dp"
        android:text="@string/report_what_issue"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/radio_sexual"
        style="@style/report_textview"
        android:text="@string/report_sexual_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#A8A9AD" />

    <TextView
        android:id="@+id/radio_violent"
        style="@style/report_textview"
        android:text="@string/report_violent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#A8A9AD" />

    <TextView
        android:id="@+id/radio_hateful"
        style="@style/report_textview"
        android:text="@string/report_hateful" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#A8A9AD" />

    <TextView
        android:id="@+id/radio_harmful"
        style="@style/report_textview"
        android:text="@string/report_harmful" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#A8A9AD" />

    <TextView
        android:id="@+id/radio_child"
        style="@style/report_textview"
        android:text="@string/report_child" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#A8A9AD" />

    <TextView
        android:id="@+id/radio_spam"
        style="@style/report_textview"
        android:text="@string/report_spam" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#A8A9AD" />

    <TextView
        android:id="@+id/radio_infringes"
        style="@style/report_textview"
        android:text="@string/report_infringes" />

</LinearLayout>