<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:minWidth="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/roundwhite"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="25dp">

    <com.gcox.fansmeet.customview.CustomFontTextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:textAlignment="center"
        tools:text="Dialog title go here"
        android:textColor="@color/dialog_confirm_title_color"
        android:textSize="16sp"
        android:textStyle="bold"
        app:appFont="@string/font_opensansbold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingTop="12dp"
        android:paddingBottom="25dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.gcox.fansmeet.customview.CustomFontTextView
            android:id="@+id/dialog_message"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            tools:text="@string/block_confirmation_content"
            android:lineSpacingExtra="3dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:gravity="center"
            android:textColor="@color/dialog_confirm_message_color"
            android:textSize="13sp"
            app:appFont="@string/font_opensansregular" />


    </LinearLayout>

    <LinearLayout
            android:id="@+id/parentOKButton"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="20dip"
        android:gravity="center"
        android:orientation="horizontal">
        <com.gcox.fansmeet.customview.CustomFontButton
            android:id="@+id/cancel"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:minWidth="80dp"
            android:background="@drawable/selector_grey_button"
            android:gravity="center"
            android:layout_marginEnd="10dp"
            android:letterSpacing="0.09"
            android:text="@string/btn_text_cancel"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:appFont="@string/font_opensansbold"
            tools:targetApi="lollipop"/>


        <com.gcox.fansmeet.customview.CustomFontButton
            android:id="@+id/ok"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:background="@drawable/selector_red_button"
            android:letterSpacing="0.09"
            app:appFont="@string/font_opensansbold"
            android:text="@string/btn_text_ok"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="12sp"
            tools:targetApi="lollipop"/>
    </LinearLayout>
</LinearLayout>
